Kiệt hoàn thành nv

--- a/DAWEB2/Views/Admin/XoaTinTuc.cshtml
+++ b/DAWEB2/Views/Admin/XoaTinTuc.cshtml
@@ -118,7 +118,7 @@
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.idTin)
     <article class="module width_full">
-        <header><h3 style="color:red;">Sửa tin </h3></header>
+        <header><h3 style="color:red;">Xóa tin </h3></header>
         <div class="module_content">
             <fieldset>
                 @Html.LabelFor(model => model.TieuDe, htmlAttributes: new { @class = "control-label col-md-2" })
