--- a/DAWEB2/Views/Admin/DeleteTheLoai.cshtml
+++ b/DAWEB2/Views/Admin/DeleteTheLoai.cshtml
@@ -14,7 +14,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.idTheLoai)
         <article class="module width_full">
-            <header><h3>Chỉnh sửa Thể loại</h3></header>
+            <header><h3>Xóa Thể loại này ?</h3></header>
             <div class="module_content">
                 <fieldset>
                     <div class="form-group">
