--- a/DAWEB2/Views/LienHe/lienhe4.cshtml
+++ b/DAWEB2/Views/LienHe/lienhe4.cshtml
@@ -8,14 +8,16 @@
         @Html.ValidationSummary(true)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })
+            @*@Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })*@
+            <label for="email">Nhập Email của bạn</label>
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Email)
-                @Html.ValidationMessageFor(model => model.Email)
+                @*@Html.EditorFor(model => model.Email)
+                @Html.ValidationMessageFor(model => model.Email)*@
+                <input type="email" name="Email" id="email" value="Nhập email của bạn" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email...';}" required="">
             </div>
         </div>
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-md-offset-2 col-md-10" style="margin-left:-2px;">
                 <input type="submit" value="Đăng ký nhận tin mới" class="btn btn-default" />
             </div>
         </div>
