--- a/DAWEB2/Views/Shared/_LayoutAdmin.cshtml
+++ b/DAWEB2/Views/Shared/_LayoutAdmin.cshtml
@@ -80,13 +80,12 @@
             <ul class="toggle">
                 <li class="icn_new_article"><a href="@Url.Action("DangTin","Admin")">Đăng tin</a></li>
                 <li class="icn_edit_article"><a href="@Url.Action("QLTheLoai","Admin")">Quản lý thể loại </a></li>
-                <li class="icn_categories"><a href="#">Quản lý loại tin</a></li>
+                <li class="icn_categories"><a href="@Url.Action("QLLoaiTin","Admin")">Quản lý loại tin</a></li>
                 <li class="icn_tags"><a href="@Url.Action("AllTin","Admin")">Tất cả tin tức</a></li>
             </ul>
             <h3>Users</h3>
             <ul class="toggle">
-                <li class="icn_add_user"><a href="#">Thêm User</a></li>
-                <li class="icn_view_users"><a href="#">Xem Users</a></li>
+                <li class="icn_view_users"><a href="@Url.Action("QLNhanVien","Admin")">Quản lý nhân viên</a></li>
                 <li class="icn_profile"><a href="#">Thông tin của bạn</a></li>
             </ul>
             <h3>Media</h3>
