--- a/DAWEB2/Views/TrangChu/Index.cshtml
+++ b/DAWEB2/Views/TrangChu/Index.cshtml
@@ -142,7 +142,7 @@
                         <!-- Tab panes -->
                         <div class="tab-content">
                             <div role="tabpanel" class="tab-pane active london" id="home">
-                                <ul>
+                                @*<ul>
                                     <li>
                                         <h4>Wednesday</h4>
                                         <span></span>
@@ -159,7 +159,13 @@
                                         <p>31<sup>°</sup></p>
                                     </li>
                                     <div class="clearfix"> </div>
-                                </ul>
+                                </ul>*@
+                                <a href="http://www.accuweather.com/vi/vn/ho-chi-minh-city/353981/weather-forecast/353981" class="aw-widget-legal">
+                                    <!--
+        By accessing and/or using this code snippet, you agree to AccuWeather’s terms and conditions (in English) which can be found at http://www.accuweather.com/en/free-weather-widgets/terms and AccuWeather’s Privacy Statement (in English) which can be found at http://www.accuweather.com/en/privacy.
+        -->
+                                </a><div id="awcc1478101273486" class="aw-widget-current" data-locationkey="" data-unit="c" data-language="vi" data-useip="true" data-uid="awcc1478101273486"></div>
+                                <script type="text/javascript" src="http://oap.accuweather.com/launch.js"></script>
                             </div>
                             <div role="tabpanel" class="tab-pane" id="profile">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26359652.109742895!2d-113.72446020222534!3d36.24602872499641!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54eab584e432360b%3A0x1c3bb99243deb742!2sUnited+States!5e0!3m2!1sen!2sin!4v1450786850582" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -167,12 +173,13 @@
                         </div>
                     </div>
                     <div class="news-grid-rght2">
-                        <h3>theo dõi bản tin của chúng tôi</h3>
+                        @*<h3>theo dõi bản tin của chúng tôi</h3>
                         <p>Nhận được tin tức và sự kiện mới nhát về công nghệ và game. Mang đến thông tin nhanh chóng bổ ích cho bạn.</p>
                         <form>
                             <input type="text" value="enter your Email address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'enter your Email address';}">
                             <input type="submit" value="Submit">
-                        </form>
+                        </form>*@
+                        @Html.Action("DangKyNhanTinMoi", "LienHe")
                     </div>
                 </div>
                 <div class="clearfix"> </div>
