Vũ hoàn thành nhiệm vụ

--- a/DAWEB2/Views/LienHe/DangKyNhanTinMoi.cshtml
+++ b/DAWEB2/Views/LienHe/DangKyNhanTinMoi.cshtml
@@ -5,7 +5,9 @@
     <h3>theo dõi bản tin của chúng tôi</h3>
     <p>Nhận được tin tức và sự kiện mới nhát về công nghệ và game. Mang đến thông tin nhanh chóng bổ ích cho bạn.</p>
     <form>
-    <input name="Email" type="text" value="enter your Email address" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'enter your Email address';}">
-    <input type="submit" value="Submit">
+    <input name="email" type="text" value="enter your Email address"
+            onfocus="this.value = '';"
+            onblur="if (this.value == '') {this.value = 'enter your Email address';}"  required="">
+    <input type="submit" value="Submit" name="btnDangKy">
     </form>
 }
