--- a/DAWEB2/Views/Shared/_Layout.cshtml
+++ b/DAWEB2/Views/Shared/_Layout.cshtml
@@ -20,6 +20,40 @@
     <!-- //js -->
     <link href='//fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
     @*------------------EndTemplateMau*@
+
+    <script type="text/javascript">
+  // dung cho menu cuộn theo
+        jQuery(document).ready(function ($) {
+            //selector đến menu cần làm việc
+            var TopFixMenu = $("#fixNav");
+            TopFixMenu.hide();
+            // dùng sự kiện cuộn chuột để bắt thông tin đã cuộn được chiều dài là bao nhiêu.
+            $(window).scroll(function () {
+                // Nếu cuộn được hơn 500px rồi
+                if ($(this).scrollTop() > 300) {
+                    // Tiến hành show menu ra
+                    TopFixMenu.show();
+                } else {
+                    // Ngược lại, nhỏ hơn 500px thì hide menu đi.
+                    TopFixMenu.hide();
+                }
+            }
+            )
+        })
+    </script>
+    <style>
+         #fixNav{
+              width: 100%;
+              height: 55px;
+              background-color: #0082bb;
+              display: block;
+              box-shadow: 0px 2px 2px rgba(0,0,0,0.5); /*Đổ bóng cho menu*/
+              position: fixed; /*Cho menu cố định 1 vị trí với top và left*/
+              top: 0; /*Nằm trên cùng*/
+              left: 0px; /*Nằm sát bên trái*/
+              z-index: 100000; /*Hiển thị lớp trên cùng*/
+            }
+    </style>
 </head>
 <body>
     <!-- banner -->
@@ -95,13 +129,23 @@
                             <a class="navbar-brand" href="@Url.Action("Index", "TrangChu")"><span>24H</span> Cong Nghe </a>
                         </div>
                     </div>
-
-                    <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav cl-effect-18" id="cl-effect-18">
                                 @Html.Action("ViewMenuTopLayTheLoai", "TrangChu")
                             </ul>
-                    </div><!-- /.navbar-collapse -->
+                    </div>
+                    <!--Menu cuộn theo trang-->
+                    <div id="fixNav">
+                        <div class="collapse navbar-collapse nav-wil" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav cl-effect-18">
+                                @Html.Action("PTVTimKiem", "TrangChu")
+                            </ul>
+                            <ul class="nav navbar-nav cl-effect-18" id="cl-effect-18">
+                                @Html.Action("ViewMenuTopLayTheLoai", "TrangChu")
+                            </ul>
+                        </div>
+                    </div>
+                    <!--End menu cuộn theo trang-->
 
                 </nav>
             </div>
