Toàn hoàn thành nhiệm vụ

--- a/DAWEB2/Views/Admin/QLLoaiTin.cshtml
+++ b/DAWEB2/Views/Admin/QLLoaiTin.cshtml
@@ -10,7 +10,7 @@
     <section id="main" class="column">
         <article class="module width_3_quarter">
             <header>
-                <h3 class="tabs_involved">Danh sách tin tức</h3>
+                <h3 class="tabs_involved">Quản lý loại tin</h3>
                 <ul class="tabs"></ul>
             </header>
             <div class="tab_container">
