--- a/DAWEB2/Views/Admin/ThemNV.cshtml
+++ b/DAWEB2/Views/Admin/ThemNV.cshtml
@@ -146,6 +146,16 @@
                             </div>
                         </div>
                     </fieldset>
+
+                    <fieldset>
+                        <div class="form-group">
+                            <label for="GioiTinh">Vai trò</label>
+                            <div class="col-md-10">
+                                @Html.DropDownList("MaVT")
+                            </div>
+                        </div>
+                    </fieldset>
+
                 </fieldset>
             </div>
             <footer>
