--- a/DAWEB2/Views/Admin/QLVaiTro.cshtml
+++ b/DAWEB2/Views/Admin/QLVaiTro.cshtml
@@ -1,8 +1,9 @@
-﻿@model IEnumerable<DAWEB2.Models.User>
+﻿@model IEnumerable<DAWEB2.Models.VaiTro>
 @{
-    ViewBag.Title = "QLNhanVien";
+    ViewBag.Title = "QLVaiTro";
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -10,7 +11,7 @@
     <section id="main" class="column">
         <article class="module width_3_quarter">
             <header>
-                <h3 class="tabs_involved">Danh sách nhân viên</h3>
+                <h3 class="tabs_involved">Danh sách vai trò</h3>
                 <ul class="tabs"></ul>
             </header>
             <div class="tab_container">
@@ -18,33 +19,20 @@
                     <table class="tablesorter" cellspacing="0">
                         <thead>
                             <tr>
-                                <th>Họ tên</th>
-                                <th>Địa chỉ</th>
-                                <th>Điện thoại</th>
-                                <th>Email</th>
-                                <th>Ngày sinh</th>
-                                <th>Giới tính</th>
-                                <th>Vai trò</th>
+                                <th>Tên vai trò</th>
                                 <th>Hành động</th>
-
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var item in Model)
                             {
                                 <tr>
-                                    <td style="color:#0026ff;font-size:15px;">@Html.DisplayFor(modelItem => item.HoTen)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.DiaChi)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.DienThoai)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Email)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.NgaySinh)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.GioiTinh)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.VaiTro.TenVT)</td>
+                                    <td style="color:#0026ff;font-size:15px;">@Html.DisplayFor(modelItem => item.TenVT)</td>
                                     <td>
-                                        <a href='@Url.Action("SuaNV", new { id = item.idUser })'>
+                                        <a href='@Url.Action("SuaVT", new { id = item.MaVT })'>
                                             <img src='@Url.Content("~/HTML5 Admin Template/images/icn_edit.png")' title="Sửa" />
                                         </a>
-                                        <a href='@Url.Action("XoaNV", new { id = item.idUser })'>
+                                        <a href='@Url.Action("XoaVT", new { id = item.MaVT })'>
                                             <img src='@Url.Content("~/HTML5 Admin Template/images/icn_trash.png")' title="Xóa" />
                                         </a>
                                     </td>
@@ -53,7 +41,7 @@
                         </tbody>
                     </table>
                 </div><!-- end of #tab1 -->
-                <a href="@Url.Action("ThemNV","Admin")" class="button1 button">Thêm nhân viên</a>
+                <a href="@Url.Action("ThemVT","Admin")" class="button1 button">Thêm vai trò mới</a>
                 <style>
                     .button {
                         background-color: #4CAF50; /* Green */
@@ -87,6 +75,4 @@
         <div class="spacer"></div>
     </section>
 }
-
-
 
