Tùng hoàn thành nhiệm vụ

--- a/DAWEB2/Views/Shared/_LayoutAdmin.cshtml
+++ b/DAWEB2/Views/Shared/_LayoutAdmin.cshtml
@@ -99,7 +99,7 @@
             </ul>
             <h3>Chức năng khác</h3>
             <ul class="toggle">
-                <li class="icn_jump_back"><a href="#">Thoát</a></li>
+                <li class="icn_jump_back">@Html.ActionLink("Thoát", "ThoatButton", "Admin")</li>
             </ul>
 
             <footer>
