--- a/DAWEB2/Views/TrangChu/ViewMenuTopLayTheLoai.cshtml
+++ b/DAWEB2/Views/TrangChu/ViewMenuTopLayTheLoai.cshtml
@@ -5,6 +5,7 @@
     {
         <li><a href="@Url.Action("TrangTheLoai","TrangChu",new { idTL = theLoai.idTheLoai})">@theLoai.TenTheLoai</a></li>
     }
+    <li><a href="@Url.Action("TrangXemNhieu", "TrangChu")">Xem nhiều nhất</a></li>
     <li><a href="@Url.Action("Index", "LienHe")">Liên Hệ</a></li>
 
 
