--- a/DAWEB2/Views/TrangChu/TrangXemNhieu.cshtml
+++ b/DAWEB2/Views/TrangChu/TrangXemNhieu.cshtml
@@ -1,5 +1,10 @@
 ﻿
 @{
+    ViewBag.Title = "TrangXemNhieu";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+@{
     ViewBag.Title = "TrangTheloai";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -11,7 +16,7 @@
             <div class="news">
                 <div class="news-grids">
                     <div class="col-md-8 news-grid-left">
-                        <h3>Tin @Html.Action("PTVLayTieuDeTheLoai", "TrangChu")</h3>
+                        <h3>Tin được xem nhiều</h3>
                         <ul>
                             @foreach (var tin in Model)
                             {
@@ -32,16 +37,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 news-grid-right">
-                        <div class="news-grid-rght1">
-                            <!-- Nav tabs -->
-                            <ul class="nav nav-tabs" role="tablist">
-                                <li role="presentation" class="active"><a class="high" href="#home" aria-controls="home" role="tab" data-toggle="tab">Danh sách loại tin</a></li>
-                            </ul>
-                            <ul style="margin-left:8%;">
-                                @Html.Action("PTVDanhMucTinTheoLoaiTin", "TrangChu")
-                            </ul>
-                        </div>
-                        <div class="video-grids">
+                        <div class="video-grids"  style="margin-top:-0px;">
                             <div class="video-grids-right">
                                 <div class="sap_tabs">
                                     <div id="horizontalTab" style="display: block; width: 100%; margin: 0px;">
@@ -49,22 +45,24 @@
                                             <li class="resp-tab-item grid1 resp-tab-active" aria-controls="tab_item-0" role="tab"><span>Tin nổi bật</span></li>
                                             <div class="clear"></div>
                                         </ul>
-                                        <div class="resp-tabs-container">
+                                        <div class="resp-tabs-container" >
                                             <h2 class="resp-accordion resp-tab-active" role="tab" aria-controls="tab_item-0"><span class="resp-arrow"></span>most shared</h2><div class="tab-1 resp-tab-content resp-tab-content-active" aria-labelledby="tab_item-0" style="display:block">
-                                            <div class="facts">
-                                                @Html.Action("PTVTinNoiBat","TrangChu")
+                                                <div class="facts">
+                                                    @Html.Action("PTVTinNoiBat", "TrangChu")
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        <div class="clearfix"> </div>
                     </div>
-                    <div class="clearfix"> </div>
                 </div>
             </div>
-        </div>
 
+        </div>
     </div>
-</div>
+
+
 
